--- a/index.html
+++ b/index.html
@@ -242,19 +242,19 @@
 
         <div class="support center-div">
           <div class="row">
-            <div class="col-lg-2 col-md-12 col-sm-12 col col-xs-12">
+            <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12  col-xl-12 col-support">
               <a href="#">About</a>
             </div>
-            <div class="col-lg-2 col-md-12 col-sm-12 col col-xs-12">
+            <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 col-xl-12 col-support">
               <a href="#">Email</a>
             </div>
-            <div class="col-lg-2 col-md-12 col-sm-12 col col-xs-12">
+            <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 col-xl-12 col-support">
               <a href="#">Support</a>
             </div>
-            <div class="col-lg-3 col-md-12 col-sm-12 col col-xs-12">
+            <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12  col-xl-12 col-support">
               <a href="#">Privacy Policies</a>
             </div>
-            <div class="col-lg-3 col-md-12 col-sm-12 col col-xs-12">
+            <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 col-xl-12 col-support">
               <a href="#">Terms & Conditions</a>
             </div>
         </div>
