--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
     <section id="section-2">
 
   <div class="container-fluid section-container-2">
-    <h1>Features that we provide through of out Applications</h1>
+    <h1>Features that we provide through our Applications</h1>
     <div class="row">
       <div class="col-lg-4 col-sm-12 col-md-6"><i class="fa-solid fa-hand-spock feature-icons"></i><p>Easy & Simple</p></div>
       <div class="col-lg-4 col-sm-12 col-md-6"><i class="fa-solid fa-hand-holding-dollar feature-icons"></i><p>Free to Access</p></div>
